--- a/pic.html
+++ b/pic.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <style>
+        /* Gaya Umum */
         body {
             font-family: 'Poppins', sans-serif;
             background: linear-gradient(135deg, #1A237E, #0D47A1);
@@ -20,6 +21,7 @@
             align-items: center;
             min-height: 100vh;
             box-sizing: border-box;
+            overflow-x: hidden; /* Mencegah scroll horizontal */
         }
 
         .interactive-title {
@@ -35,6 +37,7 @@
             border: 1px solid rgba(255, 215, 0, 0.35);
             width: 90%;
             max-width: 900px;
+            margin-top: 60px; /* Beri ruang di bawah navbar fixed */
         }
 
         .pic-container {
@@ -129,9 +132,127 @@
             box-shadow: 0px 8px 20px rgba(255, 215, 0, 0.9);
             transform: scale(1.07);
         }
+
+        /* Off-Canvas Navbar Styles (sama seperti halaman utama) */
+        .off-canvas-menu-wrapper {
+            position: fixed;
+            top: 0;
+            left: -300px; /* Sembunyikan di luar layar */
+            width: 300px;
+            height: 100%;
+            background-color: rgba(52, 73, 94, 0.95);
+            padding: 20px;
+            z-index: 1000;
+            transition: transform 0.3s ease-in-out;
+            overflow-y: auto; /* Agar bisa scroll jika menu panjang */
+            box-shadow: 2px 0 10px rgba(0, 0, 0, 0.3);
+        }
+
+        .off-canvas-menu-wrapper.open {
+            transform: translateX(300px); /* Geser masuk */
+        }
+
+        .close-button {
+            position: absolute;
+            top: 15px;
+            right: 15px;
+            background: none;
+            border: none;
+            color: #fff;
+            font-size: 24px;
+            cursor: pointer;
+            transition: opacity 0.2s ease;
+        }
+
+        .close-button:hover {
+            opacity: 0.8;
+        }
+
+        .off-canvas-nav-list {
+            list-style: none;
+            padding: 0;
+            margin-top: 60px; /* Beri jarak dari tombol close */
+        }
+
+        .off-canvas-nav-item {
+            margin-bottom: 10px;
+        }
+
+        .off-canvas-nav-link {
+            display: block;
+            text-decoration: none;
+            color: #fff;
+            font-size: 18px;
+            font-weight: 500;
+            padding: 12px 15px;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+
+        .off-canvas-nav-link i {
+            margin-right: 10px;
+            color: #3498db;
+        }
+
+        .off-canvas-nav-link:hover {
+            background-color: #3498db;
+            color: #fff;
+        }
+
+        .menu-toggle {
+            position: fixed;
+            top: 20px;
+            left: 20px;
+            background: none;
+            border: none;
+            color: #fff;
+            font-size: 28px;
+            cursor: pointer;
+            z-index: 1001; /* Di atas menu */
+            transition: opacity 0.2s ease;
+        }
+
+        .menu-toggle:hover {
+            opacity: 0.8;
+        }
     </style>
 </head>
 <body>
+    <button class="menu-toggle">
+        <i class="fa fa-bars"></i>
+    </button>
+
+    <div class="off-canvas-menu-wrapper">
+        <button class="close-button">
+            <i class="fa fa-times"></i>
+        </button>
+        <ul class="off-canvas-nav-list">
+            <li class="off-canvas-nav-item">
+                <a href="form.html" class="off-canvas-nav-link"><i class="fa fa-file-alt"></i> Form Permintaan</a>
+            </li>
+            <li class="off-canvas-nav-item">
+                <a href="feedback.html" class="off-canvas-nav-link"><i class="fa fa-comments"></i> Status Permintaan</a>
+            </li>
+            <li class="off-canvas-nav-item">
+                <a href="trackingrt.html" class="off-canvas-nav-link"><i class="fa fa-map-marker-alt"></i> Lacak RT</a>
+            </li>
+            <li class="off-canvas-nav-item">
+                <a href="https://script.google.com/macros/s/AKfycbzh2fLq_6y2KvKKyM59HF0VUz05kz0J3nAMLNVBdBKoJ35ZBoF70-o_VQvFjV7COvlM2Q/exec" class="off-canvas-nav-link">
+                    <i class="fa fa-truck-moving"></i> Lacak Pengiriman
+                </a>
+            </li>
+            <li class="off-canvas-nav-item">
+                <a href="https://script.google.com/macros/s/AKfycbxlKKcXGWC6eSCpczjZ5Z50zZ0Y3dgXinJZcZ3wPekWhbHYT9Flva3jSmr4jhJcYfD9/exec" class="off-canvas-nav-link"><i class="fa fa-clipboard-check"></i> Konfirmasi DO Project</a>
+            </li>
+            <li class="off-canvas-nav-item">
+                <a href="pic.html" class="off-canvas-nav-link"><i class="fa fa-user-tie"></i> Jajaran PIC</a>
+            </li>
+            <li class="off-canvas-nav-item">
+                <a href="index.html" class="off-canvas-nav-link"><i class="fa fa-sign-out-alt"></i> Log Out</a>
+            </li>
+        </ul>
+    </div>
+
     <div class="interactive-title">Jajaran PIC</div>
 
     <div class="pic-container" id="top-pic-list"></div>
@@ -141,6 +262,25 @@
     <button class="home-button" onclick="window.location.href='home.html'">🏠 Home</button>
 
     <script>
+        const menuToggle = document.querySelector('.menu-toggle');
+        const offCanvasMenuWrapper = document.querySelector('.off-canvas-menu-wrapper');
+        const closeButton = document.querySelector('.close-button');
+
+        menuToggle.addEventListener('click', () => {
+            offCanvasMenuWrapper.classList.add('open');
+        });
+
+        closeButton.addEventListener('click', () => {
+            offCanvasMenuWrapper.classList.remove('open');
+        });
+
+        // Tutup menu saat mengklik di luar menu (opsional)
+        document.addEventListener('click', (event) => {
+            if (!offCanvasMenuWrapper.contains(event.target) && !menuToggle.contains(event.target)) {
+                offCanvasMenuWrapper.classList.remove('open');
+            }
+        });
+
         const picData = [
             { name: "Pak Ilyas", image: "ilyas.png" },
             { name: "Pak Irfan", image: "irfan.jpeg" },
