--- a/form.html
+++ b/form.html
@@ -17,29 +17,28 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            min-height: 100vh; /* Ubah height menjadi min-height agar konten tidak terpotong */
+            min-height: 100vh;
             background: linear-gradient(135deg, #000000, #1a1a1a);
             color: white;
             text-align: center;
-            overflow-x: hidden; /* Mencegah scroll horizontal */
+            overflow: hidden;
         }
 
         /* Container utama */
         .container {
-            width: 80%;
-            max-width: 1200px;
-            height: auto; /* Tinggi menyesuaikan isi */
+            width: 85%;
+            max-width: 1400px;
+            height: 90vh;
             background: rgba(255, 215, 0, 0.1);
             backdrop-filter: blur(15px);
             border-radius: 15px;
             padding: 20px;
             box-shadow: 0px 6px 25px rgba(255, 215, 0, 0.5);
-            border: 2px solid rgba(255, 215, 0, 0.8);
+            border: 2px solid #2c3e50;
             display: flex;
             flex-direction: column;
             align-items: center;
-            margin-top: 60px; /* Beri ruang di bawah navbar fixed */
-            margin-bottom: 30px; /* Tambahkan margin bawah jika perlu */
+            margin-top: 60px;
         }
 
         /* Judul */
@@ -54,99 +53,13 @@
         /* Styling iframe */
         iframe {
             width: 98%;
-            height: 80vh; /* Gunakan vh agar responsif terhadap tinggi layar */
+            height: 85%;
             border: 2px solid rgba(255, 215, 0, 0.5);
             border-radius: 10px;
             box-shadow: 0px 4px 15px rgba(255, 215, 0, 0.3);
-            margin-bottom: 15px; /* Tambahkan margin bawah iframe */
         }
 
-        /* Tombol Home */
-        .home-button {
-            margin-top: 15px;
-            padding: 10px 20px;
-            font-size: 18px;
-            font-weight: bold;
-            color: black;
-            background-color: #FFD700;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            box-shadow: 0px 3px 10px rgba(255, 215, 0, 0.5);
-            transition: background 0.3s, transform 0.2s;
-        }
-
-        .home-button:hover {
-            background-color: #e6c300;
-            transform: scale(1.05);
-        }
-
-        /* Off-Canvas Navbar Styles (sama seperti halaman utama) */
-        .off-canvas-menu-wrapper {
-            position: fixed;
-            top: 0;
-            left: -300px; /* Sembunyikan di luar layar */
-            width: 300px;
-            height: 100%;
-            background-color: rgba(52, 73, 94, 0.95);
-            padding: 20px;
-            z-index: 1000;
-            transition: transform 0.3s ease-in-out;
-            overflow-y: auto; /* Agar bisa scroll jika menu panjang */
-            box-shadow: 2px 0 10px rgba(0, 0, 0, 0.3);
-        }
-
-        .off-canvas-menu-wrapper.open {
-            transform: translateX(300px); /* Geser masuk */
-        }
-
-        .close-button {
-            position: absolute;
-            top: 15px;
-            right: 15px;
-            background: none;
-            border: none;
-            color: #fff;
-            font-size: 24px;
-            cursor: pointer;
-            transition: opacity 0.2s ease;
-        }
-
-        .close-button:hover {
-            opacity: 0.8;
-        }
-
-        .off-canvas-nav-list {
-            list-style: none;
-            padding: 0;
-            margin-top: 60px; /* Beri jarak dari tombol close */
-        }
-
-        .off-canvas-nav-item {
-            margin-bottom: 10px;
-        }
-
-        .off-canvas-nav-link {
-            display: block;
-            text-decoration: none;
-            color: #fff;
-            font-size: 18px;
-            font-weight: 500;
-            padding: 12px 15px;
-            border-radius: 5px;
-            transition: background-color 0.3s ease;
-        }
-
-        .off-canvas-nav-link i {
-            margin-right: 10px;
-            color: #3498db;
-        }
-
-        .off-canvas-nav-link:hover {
-            background-color: #3498db;
-            color: #fff;
-        }
-
+        /* Off-Canvas Navbar Styles */
         .menu-toggle {
             position: fixed;
             top: 20px;
@@ -154,27 +67,86 @@
             background: none;
             border: none;
             color: #fff;
-            font-size: 28px;
+            font-size: 24px;
             cursor: pointer;
-            z-index: 1001; /* Di atas menu */
-            transition: opacity 0.2s ease;
+            z-index: 1001;
+            transition: transform 0.3s ease-in-out, opacity 0.2s ease;
         }
 
         .menu-toggle:hover {
             opacity: 0.8;
+            transform: scale(1.1);
+        }
+
+        .menu-toggle i {
+            transition: transform 0.3s ease-in-out;
+        }
+
+        .off-canvas-menu-wrapper {
+            position: fixed;
+            top: 0;
+            left: -300px;
+            width: 300px;
+            height: 100%;
+            background-color: rgba(52, 73, 94, 0.95);
+            padding: 20px;
+            z-index: 1000;
+            transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0);
+            overflow-y: auto;
+            box-shadow: 2px 0 10px rgba(0, 0, 0, 0.3);
+        }
+
+        .off-canvas-menu-wrapper.open {
+            transform: translateX(300px);
+        }
+
+        .close-button {
+            display: none;
+        }
+
+        .off-canvas-nav-list {
+            list-style: none;
+            padding: 0;
+            margin-top: 30px;
+        }
+
+        .off-canvas-nav-item {
+            margin-bottom: 15px;
+        }
+
+        .off-canvas-nav-link {
+            display: block;
+            text-decoration: none;
+            color: #fff;
+            font-size: 19px;
+            font-weight: 500;
+            padding: 14px 20px;
+            border-radius: 7px;
+            transition: background-color 0.3s ease, transform 0.2s ease;
+        }
+
+        .off-canvas-nav-link i {
+            margin-right: 12px;
+            color: #3498db;
+        }
+
+        .off-canvas-nav-link:hover {
+            background-color: #3498db;
+            color: #fff;
+            transform: translateX(5px);
         }
     </style>
 </head>
 <body>
     <button class="menu-toggle">
-        <i class="fa fa-bars"></i>
+        <i class="fa fa-chevron-right"></i>
     </button>
 
     <div class="off-canvas-menu-wrapper">
-        <button class="close-button">
-            <i class="fa fa-times"></i>
-        </button>
         <ul class="off-canvas-nav-list">
+            <li class="off-canvas-nav-item">
+                <a href="home.html" class="off-canvas-nav-link"><i class="fa fa-home"></i> Home</a>
+            </li>
             <li class="off-canvas-nav-item">
                 <a href="form.html" class="off-canvas-nav-link"><i class="fa fa-file-alt"></i> Form Permintaan</a>
             </li>
@@ -206,26 +178,23 @@
         <iframe src="https://formfacade.com/headless/103538950695046364359/home/form/1FAIpQLSf_lv7JwqVAQluvBn1q3H6waNVfwWnK5AziS3X3p3nO34vzug"
                 allowfullscreen>
         </iframe>
-        <button class="home-button" onclick="window.location.href='home.html'">🏠 Home</button>
     </div>
 
     <script>
         const menuToggle = document.querySelector('.menu-toggle');
         const offCanvasMenuWrapper = document.querySelector('.off-canvas-menu-wrapper');
-        const closeButton = document.querySelector('.close-button');
+        let isMenuOpen = false;
 
         menuToggle.addEventListener('click', () => {
-            offCanvasMenuWrapper.classList.add('open');
-        });
-
-        closeButton.addEventListener('click', () => {
-            offCanvasMenuWrapper.classList.remove('open');
-        });
-
-        // Tutup menu saat mengklik di luar menu (opsional)
-        document.addEventListener('click', (event) => {
-            if (!offCanvasMenuWrapper.contains(event.target) && !menuToggle.contains(event.target)) {
-                offCanvasMenuWrapper.classList.remove('open');
+            isMenuOpen = !isMenuOpen;
+            offCanvasMenuWrapper.classList.toggle('open');
+            const icon = menuToggle.querySelector('i');
+            if (isMenuOpen) {
+                icon.classList.remove('fa-chevron-right');
+                icon.classList.add('fa-chevron-left');
+            } else {
+                icon.classList.remove('fa-chevron-left');
+                icon.classList.add('fa-chevron-right');
             }
         });
     </script>
