--- a/pic.html
+++ b/pic.html
@@ -133,72 +133,7 @@
             transform: scale(1.07);
         }
 
-        /* Off-Canvas Navbar Styles (sama seperti halaman utama) */
-        .off-canvas-menu-wrapper {
-            position: fixed;
-            top: 0;
-            left: -300px; /* Sembunyikan di luar layar */
-            width: 300px;
-            height: 100%;
-            background-color: rgba(52, 73, 94, 0.95);
-            padding: 20px;
-            z-index: 1000;
-            transition: transform 0.3s ease-in-out;
-            overflow-y: auto; /* Agar bisa scroll jika menu panjang */
-            box-shadow: 2px 0 10px rgba(0, 0, 0, 0.3);
-        }
-
-        .off-canvas-menu-wrapper.open {
-            transform: translateX(300px); /* Geser masuk */
-        }
-
-        .close-button {
-            position: absolute;
-            top: 15px;
-            right: 15px;
-            background: none;
-            border: none;
-            color: #fff;
-            font-size: 24px;
-            cursor: pointer;
-            transition: opacity 0.2s ease;
-        }
-
-        .close-button:hover {
-            opacity: 0.8;
-        }
-
-        .off-canvas-nav-list {
-            list-style: none;
-            padding: 0;
-            margin-top: 60px; /* Beri jarak dari tombol close */
-        }
-
-        .off-canvas-nav-item {
-            margin-bottom: 10px;
-        }
-
-        .off-canvas-nav-link {
-            display: block;
-            text-decoration: none;
-            color: #fff;
-            font-size: 18px;
-            font-weight: 500;
-            padding: 12px 15px;
-            border-radius: 5px;
-            transition: background-color 0.3s ease;
-        }
-
-        .off-canvas-nav-link i {
-            margin-right: 10px;
-            color: #3498db;
-        }
-
-        .off-canvas-nav-link:hover {
-            background-color: #3498db;
-            color: #fff;
-        }
-
+        /* Off-Canvas Navbar Styles */
         .menu-toggle {
             position: fixed;
             top: 20px;
@@ -206,27 +141,87 @@
             background: none;
             border: none;
             color: #fff;
-            font-size: 28px;
+            font-size: 24px;
             cursor: pointer;
-            z-index: 1001; /* Di atas menu */
-            transition: opacity 0.2s ease;
+            z-index: 1001;
+            transition: transform 0.3s ease-in-out, opacity 0.2s ease;
         }
 
         .menu-toggle:hover {
             opacity: 0.8;
+            transform: scale(1.1);
         }
+
+        .menu-toggle i {
+            transition: transform 0.3s ease-in-out;
+        }
+
+        .off-canvas-menu-wrapper {
+            position: fixed;
+            top: 0;
+            left: -300px;
+            width: 300px;
+            height: 100%;
+            background-color: rgba(52, 73, 94, 0.95);
+            padding: 20px;
+            z-index: 1000;
+            transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0);
+            overflow-y: auto;
+            box-shadow: 2px 0 10px rgba(0, 0, 0, 0.3);
+        }
+
+        .off-canvas-menu-wrapper.open {
+            transform: translateX(300px);
+        }
+
+        .close-button {
+            display: none;
+        }
+
+        .off-canvas-nav-list {
+            list-style: none;
+            padding: 0;
+            margin-top: 30px;
+        }
+
+        .off-canvas-nav-item {
+            margin-bottom: 15px;
+        }
+
+        .off-canvas-nav-link {
+            display: block;
+            text-decoration: none;
+            color: #fff;
+            font-size: 19px;
+            font-weight: 500;
+            padding: 14px 20px;
+            border-radius: 7px;
+            transition: background-color 0.3s ease, transform 0.2s ease;
+        }
+
+        .off-canvas-nav-link i {
+            margin-right: 12px;
+            color: #3498db;
+        }
+
+        .off-canvas-nav-link:hover {
+            background-color: #3498db;
+            color: #fff;
+            transform: translateX(5px);
+        }
+
     </style>
 </head>
 <body>
     <button class="menu-toggle">
-        <i class="fa fa-bars"></i>
+        <i class="fa fa-chevron-right"></i>
     </button>
 
     <div class="off-canvas-menu-wrapper">
-        <button class="close-button">
-            <i class="fa fa-times"></i>
-        </button>
         <ul class="off-canvas-nav-list">
+            <li class="off-canvas-nav-item">
+                <a href="home.html" class="off-canvas-nav-link"><i class="fa fa-home"></i> Home</a>
+            </li>
             <li class="off-canvas-nav-item">
                 <a href="form.html" class="off-canvas-nav-link"><i class="fa fa-file-alt"></i> Form Permintaan</a>
             </li>
@@ -259,25 +254,21 @@
 
     <div class="bottom-container" id="bottom-pic-list"></div>
 
-    <button class="home-button" onclick="window.location.href='home.html'">🏠 Home</button>
-
     <script>
         const menuToggle = document.querySelector('.menu-toggle');
         const offCanvasMenuWrapper = document.querySelector('.off-canvas-menu-wrapper');
-        const closeButton = document.querySelector('.close-button');
+        let isMenuOpen = false;
 
         menuToggle.addEventListener('click', () => {
-            offCanvasMenuWrapper.classList.add('open');
-        });
-
-        closeButton.addEventListener('click', () => {
-            offCanvasMenuWrapper.classList.remove('open');
-        });
-
-        // Tutup menu saat mengklik di luar menu (opsional)
-        document.addEventListener('click', (event) => {
-            if (!offCanvasMenuWrapper.contains(event.target) && !menuToggle.contains(event.target)) {
-                offCanvasMenuWrapper.classList.remove('open');
+            isMenuOpen = !isMenuOpen;
+            offCanvasMenuWrapper.classList.toggle('open');
+            const icon = menuToggle.querySelector('i');
+            if (isMenuOpen) {
+                icon.classList.remove('fa-chevron-right');
+                icon.classList.add('fa-chevron-left');
+            } else {
+                icon.classList.remove('fa-chevron-left');
+                icon.classList.add('fa-chevron-right');
             }
         });
 
